# Full-Stack-Web-Development

./: README.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: pull_request.yml
backend/: Makefile  pyproject.toml
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/api/inventory/: models.py  serializers.py  urls.py  views.py
backend/api/inventory/migrations/: 0001_initial.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py
frontend/: biome.json  next.config.ts  package-lock.json  package.json
frontend/.devcontainer/: Dockerfile  devcontainer.json
frontend/app/inventory/products/: layout.tsx  page.tsx
frontend/app/inventory/products/[id]/: page.tsx
frontend/app/inventory/products/sample/: dummy_products.json
frontend/app/login/: page.tsx
