[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-stubs>=5.2.9",
    "djangorestframework>=3.16.1",
    "mypy>=1.19.1",
    "mysqlclient>=2.2.7",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.development"
