[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.16.1",
    "mysqlclient>=2.2.7",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
disable_error_code = ["var-annotated"]

[tool.django-stubs]
django_settings_module = "config.settings.development"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "django-stubs>=6.0.0",
    "django-stubs-ext>=6.0.0",
]
